# railswitch

./: .gitignore  LICENSE  README.md  SECURITY.md
.github/workflows/: engine-ci.yml  frontend-ci.yml  gateway-ci.yml
apps/dashboard/: README.md  package-lock.json  package.json
apps/dashboard/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/dashboard/app/auth/: layout.tsx
apps/dashboard/lib/: api-client.ts  auth-context.tsx  mock-data.ts
apps/portal/: README.md  package-lock.json  package.json  pnpm-lock.yaml
apps/portal/app/: globals.css  layout.tsx  page.tsx
apps/portal/lib/: mock-data.ts
apps/storefront/: README.md
docs/: README.md  architecture.md  engine-schema-contract.md  internal-api.md
examples/fastapi-integration/: README.md
examples/nextjs-integration/: README.md
infra/: README.md  docker-compose.yml  setup.sql
scripts/: README.md
services/engine/: .eslintrc.cjs  Dockerfile  README.md  demo.sql  drizzle.config.js  drizzle.config.ts  fly.toml  package-lock.json  package.json  tsconfig.json
services/engine/src/: app.ts  index.ts  queues.ts
services/engine/tests/: health.test.ts  status.test.ts
services/gateway/: Dockerfile  README.md  fly.toml  pyproject.toml  requirements-dev.txt  requirements.txt
services/gateway/app/: auth.py  config.py  db.py  engine_client.py  envelope.py  main.py
services/gateway/app/routes/: auth.py  customers.py  invoices.py  plans.py  subcriptions.py  subscriptions.py  webhooks.py
services/gateway/tests/: test_auth_middleware.py  test_health.py  test_webhook_events.py
(+143 files in other folders)
