[project]
name = "railswitch-gateway"
version = "0.1.0"
description = "RailSwitch public API gateway"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "psycopg2-binary>=2.9.9",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["asyncpg", "decouple"]
ignore_missing_imports = true